* Adding a Serial Server socket bridge to accept incoming sockets and forward to serial ports
* Retrieve running data sources more efficiently
* Fix for aborted polls on polling data sources in systems with large amounts of alarms
* Bugfix to allow migration of JSON data SQL table
* Bugfix to prevent importing databaseSchemaVersion in JSON, causing database upgrade errors

*Version 2.7.10*
* Fixing bug in upgrade and create-tables scripts for MySQL

*Version 2.7.8*
* NoSQL Database env.property to change file access type for improved performance on various systems.
* Fixed bug in multi-threaded startup that would fail to initialze some data sources if the number of threads used was greater than the number of running data sources.
* Added JSON Data for custom data storage
* Replacing Spline plot type renderer on for JFree Image Chart to reduce artifacts on plots, Spline type lines are now rendered as Lines.

*Version 2.7.6*
* Adding db.nosql env properties to allow setting the location of the NoSQL data store
* Fixed bug where HTML5 pages didn't save URL parameters on a User's home URL
* Fixed bug where OSX could have problems with XHR requests from the UI
* Added tooltips to all icons on HTML5 page toolbar
* Adding Angular support for new Mango Angular Directives
* Startup script change to create logs directory on first run to capture script output
* Fixed charting for Safari and iOS via AmCharts

*Version 2.7.4*
* Adding multi-threading to data source initialization
* Change to allow i-frame embedding of Mango hosted pages on Mango Hosted pages
* Change to ensure NONE level events do not make it into the User's Live events list
* Added latest poll times and durations to data sources edit page under the 'Runtime status' area
* Added env property runtime.datasources.logStartupMetrics to allow output of startup times for data source groups
* Added device name to event messages for data points